[package]
name = "tictactoe"
authors = ["TheAdeyemiOlayinka https://theadeyemiolayinka.com"]
description = "A TicTacToe Game Implementation in Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive", "suggestions", "color" ] }
clap_complete = "4.5.47"
colored = "3.0.0"
comfy-table = "7.1.4"
confy = "0.6.1"
dotenvy_macro = "0.15.7"
indicatif = "0.17.11"
inquire = "0.7.5"
rand = "0.9.0"
regex = "1.11.1"
rusqlite = { version = "0.34.0",features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
